--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -34,3 +34,90 @@
         }
     }
 }
+
+//Menu overlay
+.menu {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    visibility: hidden;
+
+    &.show {
+        visibility: visible;
+    }
+
+    &-branding,
+    &-nav {
+        display: flex;
+        flex-flow: column wrap;
+        align-items: center;
+        justify-content: center;
+        float: left;
+        width: 50%;
+        height: 100vh;
+        overflow: hidden;
+    }
+
+    &-nav {
+        margin: 0;
+        padding: 0;
+        list-style: none;
+        background: rgba(darken($primary-color, 5), 0.9);
+        transform: translate3d(0, -100%, 0);
+        @include easeOut();
+
+        &.show {
+            //slide in from top
+            transform: translate3d(0, 0, 0);
+        }
+
+    }
+
+    // Branding side
+    &-branding {
+        background: rgba(darken($primary-color, 5), 0.9);
+        transform: translate3d(0, 100%, 0);
+        @include easeOut();
+
+        &.show {
+            //slide in from left
+            transform: translate3d(0, 0, 0);
+        }
+    }
+
+    .portrait {
+        width: 250px;
+        height: 250px;
+        background: url(/dist/img/portrait.JPG);
+        border-radius: 50%;
+        border: solid 3px $secondary-color;
+       
+    }
+
+    .nav-item {
+        
+        &.current > a {
+            color: $secondary-color;
+        }
+    }
+    
+    .nav-link {
+        display: inline-block;
+        position: relative;
+        font-size: 30px;
+        text-transform: uppercase;
+        padding: 1rem 0;
+        font-weight: 300;
+        color: #fff;
+        text-decoration: none;
+        @include easeOut();
+
+        &:hover {
+            color: $secondary-color;
+        }
+
+    }
+    
+    
+    
+}
