Work page and responsivness

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,8 +1,9 @@
 $primary-color: #444;
 $secondary-color: #eece1a;
 $show-home-image: true;
-$home-image: url(/dist/img/background.jpg);
-$background-opacity: 0.8;
+$home-image: url(../img/background.jpg);
+$background-opacity: 0.9;
+
 
 @mixin easeOut {
     transition: all 0.5s ease-out;
@@ -14,7 +15,7 @@ $background-opacity: 0.8;
             background: $home-image;
             background-attachment: fixed;
             background-size: cover;
-
+            
             &:after {
                 content:'';
                 position: absolute;
@@ -26,5 +27,41 @@ $background-opacity: 0.8;
                 background: rgba($primary-color, $background-opacity);
             }
         }
+    }
+}
+
+//Set text color
+@function set-text-color($color) {
+    @if (lightness($color) > 40) {
+        @return #000;
+    } @else {
+        @return  #fff;
+    }
+}
+
+
+//Media Query Mixins
+
+@mixin mediaSm {
+    @media screen and (max-width: 500px) {
+        @content;
+    }
+}
+
+@mixin mediaMd {
+    @media screen and (max-width: 768px) {
+        @content;
+    }
+}
+
+@mixin mediaLg {
+    @media screen and (min-width:769px) and (max-width: 1170px) {
+        @content;
+    }
+}
+
+@mixin mediaXl {
+    @media screen and (min-width: 1171px) {
+        @content;
     }
 }
