--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -11,7 +11,7 @@
         width: 28px;
         height: 3px;
         margin: 0 0 5px 0;
-        background: #fff;
+        background: set-text-color($primary-color);
         @include easeOut;
     }
     //Rotate into X with menu lines
@@ -88,9 +88,9 @@
     .portrait {
         width: 250px;
         height: 250px;
-        background: url(/dist/img/portrait.JPG);
+        background: url(../img/portrait_small.JPG);
         border-radius: 50%;
-        border: solid 3px $secondary-color;
+        border: $secondary-color 3px solid;
        
     }
 
@@ -108,7 +108,7 @@
         text-transform: uppercase;
         padding: 1rem 0;
         font-weight: 300;
-        color: #fff;
+        color: set-text-color($primary-color);
         text-decoration: none;
         @include easeOut();
 
