--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -47,7 +47,7 @@
         transform: translate3d(100%,0,0);
 
         .portrait {
-            background: url(/dist/img/portrait_small.JPG);
+            background: url(../img/portrait_small.JPG);
             background-size: cover;
             width: 150px;
             height: 150px;
