--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,7 @@
 @import 'config';
 @import 'menu';
 
+
 * {
     box-sizing: border-box;
 }
@@ -136,6 +137,34 @@ main {
     }
 }
 
+// Contact Page
+
+.boxes {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: 1rem;
+
+    div {
+        font-size: 2rem;
+        border: 3px #fff solid;
+        padding: 1.5rem 2.5rem;
+        margin-bottom: 3rem;
+        @include easeOut;
+
+        &:hover {
+            padding: 0.5rem 1.5rem;
+            background: $secondary-color;
+            color: set-text-color($secondary-color);
+            span {
+                color: set-text-color($secondary-color);
+            }
+        }
+    }
+}
+
+
 // Button Styles
 
 .btn {
@@ -169,6 +198,6 @@ main {
     background: darken($primary-color, 10);
     color: set-text-color($primary-color);
     height: 60px;
-}
+} 
 
 @import 'mobile';
